# uv_assignment

./: README.md
my-packaged-app/: README.md  pyproject.toml
my-packaged-app/src/my_packaged_app/: main.py
my-simple-app/: README.md  main.py
my-simple-app/my_simple_app.egg-info/: PKG-INFO
