[project]
name = "my-packaged-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Letsgo-Umair", email = "umair1styearengin123@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
my-packaged-app = "my_packaged_app:main"
myapp = "my_packaged_app.main:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
